# avs-hse-22

./: .gitignore  README.md
1-idz/: CMakeLists.txt  README.md  main.s  test.txt
1-idz/asm-source/: consoleio.s  random.s
1-idz/c-source/: CMakeLists.txt  a.out  arrayprocessor.c  arrayprocessor.h  consoleio.c  consoleio.h  (+7 more)
1-seminar/: README.md  diff_intel_atat.txt  hello_asm.asm  hello_compiled_O0_intel.s
2-idz/: README.md
2-seminar/: README.md  a.out  diff.txt  shell-sort-fixed.c
3-idz/: README.md
3-seminar/: README.md  Новая таблица - Лист1.csv
4-seminar/: README.md  README.sync-conflict-20221019-051847-QBTUSMW.md
idz-01/: README.md
idz-02/: README.md
idz-03/: README.md
idz-1/: README.md
idz-2/: README.md
idz-3/: README.md
idz-4/: README.md
idz-4/cpp-source/: CMakeLists.txt  a.out  input.txt  main.cpp
idz-4/cpp-source/consultant/: Consultant.cpp  Consultant.h
idz-4/cpp-source/customer/: Customer.cpp  Customer.h
idz-4/cpp-source/customers-producer/: CustomersProducer.h  RandomCustomersProducer.h  StreamCustomersProducer.h
idz-4/cpp-source/product/: Product.cpp  Product.h
idz-4/cpp-source/store/: Department.cpp  Department.h  Store.cpp  Store.h
idz-4/cpp-source/utils/: ArgumentParser.h  Logger.cpp  Logger.h  SafeQueue.cpp  SafeQueue.h
seminar-02/: shell-sort.c
seminar-03/: README.md
seminar-1/: README.md  hello.out  hello_compiled.s  hello_preprocessed.i
seminar-11/: README.md  main-edited.cpp
seminar-12/: README.md  main.cpp
seminar-2/: README.md  shell-sort-fixed.out
seminar-3/: README.md
seminar-4/: README.md
(+180 files in other folders)
